[project]
name = "merge_cobertura"
version = "0.0.1"
authors = [
    { name = "Louis DEVIE", email = "louisdevie.contact@gmail.com" },
]
description = "A CLI tool to merge multiple coverage report in cobertura XML format."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["bs4", "lxml"]


[project.scripts]
merge-cobertura = "merge_cobertura:cli"


[project.urls]
Homepage = "https://github.com/louisdevie/merge-cobertura"
Issues = "https://github.com/louisdevie/merge-cobertura/issues"


[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"